overflow fix 3

--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 /* Box Model Fix */
 html {
     box-sizing: border-box;
+    overflow-x: hidden;
 }
 
 *,
